@@ -1,5 +1,18 @@
 package com.devonfw.tools.ide.io;
 
+import com.devonfw.tools.ide.cli.CliException;
+import com.devonfw.tools.ide.context.IdeContext;
+import com.devonfw.tools.ide.process.ProcessContext;
+import com.devonfw.tools.ide.url.model.file.UrlChecksum;
+import com.devonfw.tools.ide.util.DateTimeUtil;
+import com.devonfw.tools.ide.util.FilenameUtil;
+import com.devonfw.tools.ide.util.HexUtil;
+import org.apache.commons.compress.archivers.ArchiveEntry;
+import org.apache.commons.compress.archivers.ArchiveInputStream;
+import org.apache.commons.compress.archivers.tar.TarArchiveEntry;
+import org.apache.commons.compress.archivers.tar.TarArchiveInputStream;
+import org.apache.commons.compress.archivers.zip.ZipArchiveInputStream;
+
 import java.io.BufferedOutputStream;
 import java.io.FileInputStream;
 import java.io.FileOutputStream;
@@ -16,7 +29,6 @@ import java.nio.file.Files;
 import java.nio.file.LinkOption;
 import java.nio.file.NoSuchFileException;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.nio.file.attribute.BasicFileAttributes;
 import java.nio.file.attribute.PosixFilePermission;
 import java.nio.file.attribute.PosixFilePermissions;
@@ -28,20 +40,10 @@ import java.util.ArrayList;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Set;
+import java.util.function.Consumer;
 import java.util.function.Function;
 import java.util.function.Predicate;
 import java.util.stream.Stream;
-
-import org.apache.commons.compress.archivers.ArchiveEntry;
-import org.apache.commons.compress.archivers.ArchiveInputStream;
-import org.apache.commons.compress.archivers.tar.TarArchiveEntry;
-import org.apache.commons.compress.archivers.tar.TarArchiveInputStream;
-import org.apache.commons.compress.archivers.zip.ZipArchiveInputStream;
-
-import com.devonfw.tools.ide.context.IdeContext;
-import com.devonfw.tools.ide.url.model.file.UrlChecksum;
-import com.devonfw.tools.ide.util.DateTimeUtil;
-import com.devonfw.tools.ide.util.HexUtil;
 
 /**
  * Implementation of {@link FileAccess}.
@@ -82,7 +84,7 @@ public class FileAccessImpl implements FileAccess {
       } else if (url.startsWith("ftp") || url.startsWith("sftp")) {
         throw new IllegalArgumentException("Unsupported download URL: " + url);
       } else {
-        Path source = Paths.get(url);
+        Path source = Path.of(url);
         if (isFile(source)) {
           // network drive
           copyFileWithProgressBar(source, target);
@@ -226,6 +228,7 @@ public class FileAccessImpl implements FileAccess {
 
     if (Files.isSymbolicLink(fileOrFolder)) {
       delete(fileOrFolder);
+      return;
     }
     Path backupPath = this.context.getIdeHome().resolve(IdeContext.FOLDER_UPDATES).resolve(IdeContext.FOLDER_BACKUPS);
     LocalDateTime now = LocalDateTime.now();
@@ -255,6 +258,13 @@ public class FileAccessImpl implements FileAccess {
     boolean fileOnly = mode.isFileOnly();
     if (fileOnly) {
       this.context.debug("Copying file {} to {}", source, target);
+      if (Files.isDirectory(target)) {
+        // if we want to copy "file.txt" to the existing folder "path/to/folder/" in a shell this will copy "file.txt" into that folder
+        // with Java NIO the raw copy method will fail as we cannot copy the file to the path of the target folder
+        // even worse if FileCopyMode is override the target folder ("path/to/folder/") would be deleted and the result
+        // of our "file.txt" would later appear in "path/to/folder". To prevent such bugs we append the filename to target
+        target = target.resolve(source.getFileName());
+      }
     } else {
       this.context.debug("Copying {} recursively to {}", source, target);
     }
@@ -287,7 +297,7 @@ public class FileAccessImpl implements FileAccess {
         }
       }
     } else if (Files.exists(source)) {
-      if (mode == FileCopyMode.COPY_TREE_OVERRIDE_FILES) {
+      if (mode.isOverrideFile()) {
         delete(target);
       }
       this.context.trace("Copying {} to {}", source, target);
@@ -341,7 +351,7 @@ public class FileAccessImpl implements FileAccess {
    *
    * @param source the {@link Path} to adapt.
    * @param targetLink the {@link Path} used to calculate the relative path to the {@code source} if {@code relative} is
-   *        set to {@code true}.
+   * set to {@code true}.
    * @param relative the {@code relative} flag.
    * @return the adapted {@link Path}.
    * @see FileAccessImpl#symlink(Path, Path, boolean)
@@ -358,7 +368,7 @@ public class FileAccessImpl implements FileAccess {
       if (relative) {
         source = targetLink.getParent().relativize(source);
         // to make relative links like this work: dir/link -> dir
-        source = (source.toString().isEmpty()) ? Paths.get(".") : source;
+        source = (source.toString().isEmpty()) ? Path.of(".") : source;
       }
     } else { // source is relative
       if (relative) {
@@ -366,7 +376,7 @@ public class FileAccessImpl implements FileAccess {
         // this ../d1/../d2 to ../d2
         source = targetLink.getParent()
             .relativize(targetLink.resolveSibling(source).toRealPath(LinkOption.NOFOLLOW_LINKS));
-        source = (source.toString().isEmpty()) ? Paths.get(".") : source;
+        source = (source.toString().isEmpty()) ? Path.of(".") : source;
       } else { // !relative
         try {
           source = targetLink.resolveSibling(source).toRealPath(LinkOption.NOFOLLOW_LINKS);
@@ -399,8 +409,7 @@ public class FileAccessImpl implements FileAccess {
       } catch (IOException e) {
         throw new IllegalStateException(
             "Since Windows junctions are used, the source must be an absolute path. The transformation of the passed "
-                + "source (" + source + ") to an absolute path failed.",
-            e);
+                + "source (" + source + ") to an absolute path failed.", e);
       }
 
     } else {
@@ -422,8 +431,9 @@ public class FileAccessImpl implements FileAccess {
     try {
       adaptedSource = adaptPath(source, targetLink, relative);
     } catch (IOException e) {
-      throw new IllegalStateException("Failed to adapt source for source (" + source + ") target (" + targetLink
-          + ") and relative (" + relative + ")", e);
+      throw new IllegalStateException(
+          "Failed to adapt source for source (" + source + ") target (" + targetLink + ") and relative (" + relative
+              + ")", e);
     }
     this.context.trace("Creating {} symbolic link {} pointing to {}", adaptedSource.isAbsolute() ? "" : "relative",
         targetLink, adaptedSource);
@@ -446,8 +456,9 @@ public class FileAccessImpl implements FileAccess {
         throw new RuntimeException(e);
       }
     } catch (IOException e) {
-      throw new IllegalStateException("Failed to create a " + (adaptedSource.isAbsolute() ? "" : "relative")
-          + "symbolic link " + targetLink + " pointing to " + source, e);
+      throw new IllegalStateException(
+          "Failed to create a " + (adaptedSource.isAbsolute() ? "" : "relative") + "symbolic link " + targetLink
+              + " pointing to " + source, e);
     }
   }
 
@@ -487,20 +498,103 @@ public class FileAccessImpl implements FileAccess {
   }
 
   @Override
-  public void unzip(Path file, Path targetDir) {
+  public void extract(Path archiveFile, Path targetDir, Consumer<Path> postExtractHook, boolean extract) {
 
-    unpack(file, targetDir, in -> new ZipArchiveInputStream(in));
+    if (Files.isDirectory(archiveFile)) {
+      Path properInstallDir = archiveFile; //getProperInstallationSubDirOf(archiveFile, archiveFile);
+      if (extract) {
+        this.context.warning("Found directory for download at {} hence copying without extraction!", archiveFile);
+        copy(properInstallDir, targetDir, FileCopyMode.COPY_TREE_OVERRIDE_TREE);
+      } else {
+        move(properInstallDir, targetDir);
+      }
+      return;
+    } else if (!extract) {
+      mkdirs(targetDir);
+      move(archiveFile, targetDir.resolve(archiveFile.getFileName()));
+      return;
+    }
+    Path tmpDir = createTempDir("extract-" + archiveFile.getFileName());
+    this.context.trace("Trying to extract the downloaded file {} to {} and move it to {}.", archiveFile, tmpDir,
+        targetDir);
+    String filename = archiveFile.getFileName().toString();
+    TarCompression tarCompression = TarCompression.of(filename);
+    if (tarCompression != null) {
+      extractTar(archiveFile, tmpDir, tarCompression);
+    } else {
+      String extension = FilenameUtil.getExtension(filename);
+      if (extension == null) {
+        throw new IllegalStateException("Unknown archive format without extension - can not extract " + archiveFile);
+      } else {
+        this.context.trace("Determined file extension {}", extension);
+      }
+      switch (extension) {
+        case "zip", "jar" -> {
+          extractZip(archiveFile, tmpDir);
+        }
+        case "dmg" -> {
+          extractDmg(archiveFile, tmpDir);
+        }
+        case "msi" -> {
+          extractMsi(archiveFile, tmpDir);
+        }
+        case "pkg" -> {
+          extractPkg(archiveFile, tmpDir);
+        }
+        default -> {
+          throw new IllegalStateException("Unknown archive format " + extension + ". Can not extract " + archiveFile);
+        }
+      }
+    }
+    Path properInstallDir = getProperInstallationSubDirOf(tmpDir, archiveFile);
+    if (postExtractHook != null) {
+      postExtractHook.accept(properInstallDir);
+    }
+    move(properInstallDir, targetDir);
+    delete(tmpDir);
+  }
+
+  /**
+   * @param path the {@link Path} to start the recursive search from.
+   * @return the deepest subdir {@code s} of the passed path such that all directories between {@code s} and the passed
+   * path (including {@code s}) are the sole item in their respective directory and {@code s} is not named "bin".
+   */
+  private Path getProperInstallationSubDirOf(Path path, Path archiveFile) {
+
+    try (Stream<Path> stream = Files.list(path)) {
+      Path[] subFiles = stream.toArray(Path[]::new);
+      if (subFiles.length == 0) {
+        throw new CliException(
+            "The downloaded package " + archiveFile + " seems to be empty as you can check in the extracted folder "
+                + path);
+      } else if (subFiles.length == 1) {
+        String filename = subFiles[0].getFileName().toString();
+        if (!filename.equals(IdeContext.FOLDER_BIN) && !filename.equals(IdeContext.FOLDER_CONTENTS)
+            && !filename.endsWith(".app") && Files.isDirectory(subFiles[0])) {
+          return getProperInstallationSubDirOf(subFiles[0], archiveFile);
+        }
+      }
+      return path;
+    } catch (IOException e) {
+      throw new IllegalStateException("Failed to get sub-files of " + path);
+    }
   }
 
   @Override
-  public void untar(Path file, Path targetDir, TarCompression compression) {
+  public void extractZip(Path file, Path targetDir) {
 
-    unpack(file, targetDir, in -> new TarArchiveInputStream(compression.unpack(in)));
+    extractArchive(file, targetDir, in -> new ZipArchiveInputStream(in));
+  }
+
+  @Override
+  public void extractTar(Path file, Path targetDir, TarCompression compression) {
+
+    extractArchive(file, targetDir, in -> new TarArchiveInputStream(compression.unpack(in)));
   }
 
   /**
    * @param permissions The integer as returned by {@link TarArchiveEntry#getMode()} that represents the file
-   *        permissions of a file on a Unix file system.
+   * permissions of a file on a Unix file system.
    * @return A String representing the file permissions. E.g. "rwxrwxr-x" or "rw-rw-r--"
    */
   public static String generatePermissionString(int permissions) {
@@ -519,7 +613,7 @@ public class FileAccessImpl implements FileAccess {
     return permissionStringBuilder.toString();
   }
 
-  private void unpack(Path file, Path targetDir, Function<InputStream, ArchiveInputStream> unpacker) {
+  private void extractArchive(Path file, Path targetDir, Function<InputStream, ArchiveInputStream> unpacker) {
 
     this.context.trace("Unpacking archive {} to {}", file, targetDir);
     try (InputStream is = Files.newInputStream(file); ArchiveInputStream ais = unpacker.apply(is)) {
@@ -532,7 +626,7 @@ public class FileAccessImpl implements FileAccess {
           permissionStr = generatePermissionString(tarMode);
         }
 
-        Path entryName = Paths.get(entry.getName());
+        Path entryName = Path.of(entry.getName());
         Path entryPath = targetDir.resolve(entryName).toAbsolutePath();
         if (!entryPath.startsWith(targetDir)) {
           throw new IOException("Preventing path traversal attack from " + entryName + " to " + entryPath);
@@ -544,7 +638,7 @@ public class FileAccessImpl implements FileAccess {
           mkdirs(entryPath.getParent());
           Files.copy(ais, entryPath);
         }
-        if (isTar) {
+        if (isTar && !this.context.getSystemInfo().isWindows()) {
           Set<PosixFilePermission> permissions = PosixFilePermissions.fromString(permissionStr);
           Files.setPosixFilePermissions(entryPath, permissions);
         }
@@ -553,6 +647,44 @@ public class FileAccessImpl implements FileAccess {
     } catch (IOException e) {
       throw new IllegalStateException("Failed to extract " + file + " to " + targetDir, e);
     }
+  }
+
+  public void extractDmg(Path file, Path targetDir) {
+
+    assert this.context.getSystemInfo().isMac();
+
+    Path mountPath = this.context.getIdeHome().resolve(IdeContext.FOLDER_UPDATES).resolve(IdeContext.FOLDER_VOLUME);
+    mkdirs(mountPath);
+    ProcessContext pc = this.context.newProcess();
+    pc.executable("hdiutil");
+    pc.addArgs("attach", "-quiet", "-nobrowse", "-mountpoint", mountPath, file);
+    pc.run();
+    Path appPath = findFirst(mountPath, p -> p.getFileName().toString().endsWith(".app"), false);
+    if (appPath == null) {
+      throw new IllegalStateException("Failed to unpack DMG as no MacOS *.app was found in file " + file);
+    }
+    copy(appPath, targetDir);
+    pc.addArgs("detach", "-force", mountPath);
+    pc.run();
+  }
+
+  public void extractMsi(Path file, Path targetDir) {
+
+    this.context.newProcess().executable("msiexec").addArgs("/a", file, "/qn", "TARGETDIR=" + targetDir).run();
+    // msiexec also creates a copy of the MSI
+    Path msiCopy = targetDir.resolve(file.getFileName());
+    delete(msiCopy);
+  }
+
+  public void extractPkg(Path file, Path targetDir) {
+
+    Path tmpDirPkg = createTempDir("ide-pkg-");
+    ProcessContext pc = this.context.newProcess();
+    // we might also be able to use cpio from commons-compression instead of external xar...
+    pc.executable("xar").addArgs("-C", tmpDirPkg, "-xf", file).run();
+    Path contentPath = findFirst(tmpDirPkg, p -> p.getFileName().toString().equals("Payload"), true);
+    extractTar(contentPath, targetDir, TarCompression.GZ);
+    delete(tmpDirPkg);
   }
 
   @Override
