@@ -1,7 +1,6 @@
 package com.devonfw.tools.ide.process;
 
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.List;
 import java.util.Objects;
 
@@ -41,7 +40,7 @@ public interface ProcessContext {
    */
   default ProcessContext executable(String executable) {
 
-    return executable(Paths.get(executable));
+    return executable(Path.of(executable));
   }
 
   /**
@@ -133,7 +132,7 @@ public interface ProcessContext {
    */
   default int run() {
 
-    return run(false).getExitCode();
+    return run(ProcessMode.DEFAULT).getExitCode();
   }
 
   /**
@@ -141,11 +140,9 @@ public interface ProcessContext {
    * arguments}. Will reset the {@link #addArgs(String...) arguments} but not the {@link #executable(Path) command} for
    * sub-sequent calls.
    *
-   * @param capture - {@code true} to capture standard {@link ProcessResult#getOut() out} and
-   *        {@link ProcessResult#getErr() err} in the {@link ProcessResult}, {@code false} otherwise (to redirect out
-   *        and err).
+   * @param processMode {@link ProcessMode}
    * @return the {@link ProcessResult}.
    */
-  ProcessResult run(boolean capture);
+  ProcessResult run(ProcessMode processMode);
 
 }
